// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerAddComponent should save 1`] = `
Object {
  "companyName": "COMPANY_NAME",
  "customerAddresses": null,
  "emailAddress": "EMAIL_ADDRESS",
  "id": undefined,
  "name": "NAME",
  "num": "NUM-nu.323",
  "orders": null,
  "phone": "PHONE",
  "salesAgent": Object {},
  "salesAgentId": 0,
}
`;

exports[`CustomerEditComponent should update 1`] = `
Object {
  "companyName": "COMPANY_NAME",
  "customerAddresses": null,
  "emailAddress": "EMAIL_ADDRESS",
  "id": "ID",
  "name": "NAME",
  "num": "NUM-num-23",
  "orders": null,
  "phone": "PHONE",
  "salesAgent": Object {},
  "salesAgentId": 0,
}
`;
